maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:27: error: ':' expected but ')' found.
  def keepHandOnSideWall(etat)  {
                             ^IslandMaze:52: error: identifier expected but '}' found.
} 
^